# course-rust-in-motion

./: .directory  Cargo.toml
apuntes/: 2_installing.txt  8_structs.txt  9_methods.txt
apuntes/unit-1/: 3_variables.txt  4_data-types.txt  5_functions.txt  6_control-flow.txt  7_enums.txt
apuntes/unit-2/: 2-what-is-ownership.txt  4-borrowing.txt  5-slices.txt  6-borroing-and-mutability.txt  7-borrowing-code-patterns.txt  8-ownership-of-more-than-just-memory.txt
apuntes/unit-3/: 2-panicking-when-something-goes-wrong.txt  3-handling-results-and-options.txt  4-writing-a-function-that-returns-a-result-and-using-the-question-mark-operator.txt  5-advantages-of-rust's-error-handling-strategy.txt  6-custom-error-types.txt  7-error-handling-crates.txt  8-useful-methods-on-result-and-option.txt
apuntes/unit-4/: 2-an-exploration-of-concrete-lifetimes.txt
src/: fn-01-birthday.rs  fn-02-square.rs  fn-03-discount.rs  for-demo.rs  loop-demo.rs  main.rs  match-demo-02.rs  match-demo.rs  struct-demo.rs  tuple-struct-demo.rs  while-demo.rs
src/unit-1/: 03_variables.rs  04_data-types.rs  05_functions.rs  06_control-flow.rs  07_enums.rs  08_structs.rs  09_methods.rs  main.rs
src/unit-2/: 02_ownership.rs  04_borrowing.rs  05_slices.rs  06_1_borrowing_and_mutability.rs  06_borrowing_and_mutability.rs  07_0_borrows_happen_at_the_same_time.rs  07_1_borrows_happen_at_the_same_time_1.rs  07_3_temporary_variable.rs  07_4_entry_entry_api.rs  07_5_splitting_up_structs.rs  07_borrows_happen_at_the_same_time_1.rs  07_new_scopes.rs  07_splitting_up_structs.rs  07_temporary_variable.rs  08_0_socket_and_ownership.rs  08_1_drop_trait.rs
src/unit-3/: 02_1_unreachable.rs  02_2_unimplemented.rs  02_unimplemented.rs  03_0_parsing_json.rs  03_1_last_from_vector.rs  03_3_parsing_json.rs  04_0_save_function_0.rs  04_0_save_function_1.rs  04_1_add_five_to_last_func.rs  04_2_use_q_mark_main.rs  05_0_failing_loudly.rs  05_1_using_expect.rs  06_0_using_box_error.rs  06_1_using_custom_error_type.rs  07_0_quick_error.rs  07_1_error_chain.rs  07_2_failure.rs  08_0_antipattern.rs  08_1_fallback_value.rs  08_2_fallback_value_def_trait.rs  08_3_map_trans_ok_or_some.rs
src/unit-4/: 02_0_reference_to_a_vector.rs  02_1_reference_in_an_inner_scope.rs  02_3_passing_a_reference_to_a_function.rs  02_4_function_returning_a_reference.rs
