[package]
name = "myproject"
version = "0.1.0"
authors = ["Cristian David Ippolito Carrillo <cristiandavidippolito@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Here's an example of a TOML "array of tables" section, in this case specifying
# a binary target name and path.
[[bin]]
name = "variables"
path = "src/unit-1/03_variables.rs"

[[bin]]
name = "data-types"
path = "src/unit-1/04_data-types.rs"

[[bin]]
name = "functions"
path = "src/unit-1/05_functions.rs"

[[bin]]
name = "control-flow"
path = "src/unit-1/06_control-flow.rs"

[[bin]]
name = "enums"
path = "src/unit-1/07_enums.rs"

[[bin]]
name = "sturcts"
path = "src/unit-1/08_structs.rs"

[[bin]]
name = "methods"
path = "src/unit-1/09_methods.rs"

[[bin]]
name = "ownership"
path = "src/unit-2/02_ownership.rs"


[dependencies]
