[package]
name = "myproject"
version = "0.1.0"
authors = ["Cristian David Ippolito Carrillo <cristiandavidippolito@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Here's an example of a TOML "array of tables" section, in this case specifying
# a binary target name and path.

# init 1

[[bin]]
name = "variables"
path = "src/unit-1/03_variables.rs"

[[bin]]
name = "data-types"
path = "src/unit-1/04_data-types.rs"

[[bin]]
name = "functions"
path = "src/unit-1/05_functions.rs"

[[bin]]
name = "control-flow"
path = "src/unit-1/06_control-flow.rs"

[[bin]]
name = "enums"
path = "src/unit-1/07_enums.rs"

[[bin]]
name = "sturcts"
path = "src/unit-1/08_structs.rs"

[[bin]]
name = "methods"
path = "src/unit-1/09_methods.rs"

# unit 2

[[bin]]
name = "ownership"
path = "src/unit-2/02_ownership.rs"

[[bin]]
name = "borrowing"
path = "src/unit-2/04_borrowing.rs"

[[bin]]
name = "slices"
path = "src/unit-2/05_slices.rs"

[[bin]]
name = "borrowing-and-mutability"
path = "src/unit-2/06_1_borrowing_and_mutability.rs"

[[bin]]
name = "borrowing-code-patterns"
path = "src/unit-2/07_5_splitting_up_structs.rs"

[[bin]]
name = "ownership-of-more-than-just-memory"
path = "src/unit-2/08_1_drop_trait.rs"

# unit 3

[[bin]]
name = "panicking-when-something-goes-wrong"
path = "src/unit-3/02_2_unimplemented.rs"

[[bin]]
name = "handling-results-and-options"
path = "src/unit-3/03_3_parsing_json.rs"

[[bin]]
name = "writing-a-function-that-returns-a-result-and-using-the-question-mark-operator"
path = "src/unit-3/04_2_use_q_mark_main.rs"

[[bin]]
name = "advantages-of-rusts-error-handling-strategy"
path = "src/unit-3/05_1_using_expect.rs"

[[bin]]
name = "custom-error-types"
path = "src/unit-3/06_1_using_custom_error_type.rs"

[[bin]]
name = "error-handling-crates"
path = "src/unit-3/07_2_failure.rs"

[[bin]]
name = "useful-methods-on-result-and-option"
path = "src/unit-3/08_3_map_trans_ok_or_some.rs"

# unit 4
[[bin]]
name = "an-exploration-of-concrete-lifetimes"
path = "src/unit-4/02_0_reference_to_a_vector.rs"

[dependencies]
serde = "1.0.117"
serde_json = "1.0.59"
serde_derive = "1.0.117"
quick-error = "=1.2.2"
error-chain = "=0.12.0"
backtrace = "=0.3.18"
failure = "=0.1.5"
failure_derive = "=0.1.5"
